# glare

./: CLAUDE.md  README.md  pyproject.toml
examples/wrangell/: wrangell.py
examples/wrangell/preprocessing/: make_dem.py  make_insolation.py  make_pancarra_vars.py  projection_dictionary.py
glare/: __init__.py  grid.py  helpers.py  model.py  operators.py  solar_potential.py  torch.py
glare/cuda/: azimuth_trace.cu  smb.cu
